style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: 'Lato', sans-serif;
  background: #d3d3d3;
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

.dn {
  display: none;
}

.df {
  display: flex !important;
}

.db {
  display: block;
}

.dib {
  display: inline-block;
}

.primary-color {
  color: #ec5242;
}

.header {
  left: 0;
  top: 0;
  display: flex;
  position: fixed;
  flex-direction: column;
  min-height: 70px;
  align-items: center;
  width: 100%;
  z-index: 100;
  padding: 0 20px;
  justify-content: center;
  box-shadow: 0 3px 5px rgba(155, 155, 155, 0.3);
  background: rgba(255, 255, 255, 0.5);
}

.header-top {
  display: none;
}

/* Navigation Bar */
.navbar {
  width: 100%;
  max-width: 880px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.brand {
  padding-left: 25px;
}

.menu-icon {
  color: #272a31;
  width: 25px;
  height: 25px;
  align-self: center;
  cursor: pointer;
}

.menu-icon img {
  width: 100%;
  height: 100%;
}

.nav-item-group {
  display: flex;
  list-style: none;
  align-items: center;
}

.d-nav {
  display: none;
}

.m-nav {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  min-height: 100vh;
  position: absolute;
  flex-direction: column;
  background: rgba(236, 82, 66, 0.4);
  align-items: flex-start;
  padding: 25px;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

.m-nav.nav-item-group {
  padding-top: 35px;
  font-weight: bold;
}

.nav-link {
  width: 100%;
  display: block;
  margin: 10px;
  color: #fff;
  font-size: 20px;
  padding: 10px;
  transition: color 0.1s ease-in-out;
}

.nav-link:hover {
  color: #ec5242;
}

.nav-link:active {
  color: #d3d3d3;
}

.nav-box {
  border: 3px solid #ec5242;
  font-weight: bold;
  color: #ec5242 !important;
}

.nav-box:hover {
  background: #ec5242;
  color: #fff !important;
}

.nav-box:active {
  color: #ec5242 !important;
  background: #fff !important;
}

.active {
  color: #ec5242 !important;
}

.cross-icon {
  position: absolute;
  top: 25px;
  right: 25px;
  cursor: pointer;
}

/* End of navigation bar */

/* Main Container */

/* Hero Section */
.hero {
  display: flex;
  flex-direction: column;
  min-height: 90vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("./images/hero-bg.png");
  padding: 15px;
}

.hero-greeting {
  margin-top: 70px;
}

.hero-title {
  font-size: 2rem;
  font-weight: 900;
  background-image: url("./images/hero-title-bg.jpg");
  background-size: cover;
  background-attachment: fixed;
  color: transparent;
  -webkit-background-clip: text;
}

.hero-details {
  background: rgba(201, 201, 201, 0.5);
  color: #272a31;
  border-radius: 10px;
  padding: 10px;
  margin: 10px 0;
  text-align: justify;
  max-width: 800px;
  box-shadow: 0 3px 10px #b1b1b1;
}

.hero-deadline-title {
  font-size: 1.7rem;
  font-weight: 900;
  margin: 15px 0;
  color: #616161;
}

.btn-join {
  border: 3px solid #ec5242;
  background: #ec5242;
  color: #fff;
  font-size: 1.2rem;
  font-weight: bold;
  max-width: 300px;
  margin: 10px 0;
  padding: 15px 20px;
  transition: all 0.2s ease-in-out;
}

.btn-join:hover {
  border-radius: 10px;
  color: #fff;
  background: #ec5242;
}

.btn-join:active {
  background: #d6d6d6;
  color: #ec5242;
}

/* Program Section */
.program {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("./images/program.png");
}

.program-title {
  margin: 35px;
  padding: 15px;
  color: #fff;
  text-align: center;
}

.program-title::after {
  content: '';
  border-bottom: 3px solid #ec5242;
  display: block;
  padding-bottom: 10px;
  margin: 0 auto;
  width: 90px;
}

.program-group {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 100%;
  list-style: none;
}

.program-item {
  display: flex;
  flex-direction: row;
  padding: 10px;
  background: rgba(255, 255, 255, 0.08);
  border: 2px solid transparent;
  transition: all 0.3s ease-in-out;
  margin: 0 15px;
}

.program-item:hover {
  transform: translateY(-3px);
  border-color: #fff;
}

.program-img {
  align-self: center;
  margin: 10px 0;
  width: 40px;
}

.program-img img {
  width: 100%;
}

.program-name {
  color: #ec5242;
  font-size: 1.1rem;
  font-weight: bold;
  text-align: center;
  margin: 10px 0;
  width: 40%;
  align-self: center;
}

.program-details {
  color: #fff;
  text-align: left;
  width: 50%;
  align-self: center;
  font-size: 14px;
}

.btn-program {
  width: 80%;
  text-decoration: none;
  color: #fff;
  background: #ec5242;
  margin: 35px 0;
  padding: 20px;
  border: 1px solid #ec5242;
}

.btn-program:hover {
  background: #fff;
  color: #ec5242;
}

.btn-program:active {
  background: #d6d6d6;
  color: #272a31;
}

/* Tutor Section */
.tutor {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: #fff;
  padding: 25px 0;
}

.tutor-title {
  color: #272a31;
}

.tutor-group {
  display: flex;
  list-style: none;
  max-width: 800px;
  flex-direction: column;
  margin: 0 auto;
}

.tutor-list {
  display: flex;
  padding: 10px;
  box-shadow: 0 3px 7px #d3d3d3;
  width: 100%;
  transition: all 0.2s ease-in-out;
}

.tutor-list:hover {
  background: #fcc2a7;
}

.tutor-img {
  position: relative;
  min-width: 120px;
  min-height: 120px;
}

.tiles {
  width: 65px;
  height: 65px;
}

.profile {
  width: 100px;
  height: 100px;
  position: absolute;
  left: 20px;
  top: 20px;
  transition: transform 0.2s ease-in-out;
}

.tutor-list:hover .profile {
  transform: translate(-20px, -20px);
}

.tutor-info {
  margin-left: 10px;
  flex: 1;
  align-self: center;
}

.tutor-position {
  margin: 10px 0;
  color: #ec5242;
}

.tutor-details {
  font-size: 14px;
  text-align: justify;
}

.see-more-tutors {
  padding: 10px 15px;
  border: 1px solid #272a31;
  transition: all 0.1s ease-in-out;
  display: none;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin: 30px 20px;
  font-size: 16px;
  cursor: pointer;
}

.see-more-tutors:hover {
  border-color: #ec5242;
  color: #ec5242;
  border-radius: 10px;
}

.see-more-tutors:active {
  background: #d3d3d3;
}

#d-tutor-group {
  display: none;
}

#m-tutor-group {
  display: flex;
}

/* Sponser Section */
.sponser {
  background: #272a31;
  color: #d3d3d3;
  padding: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.sponser > .program-title {
  color: #d3d3d3;
}

.sponser-item-group {
  display: flex;
  max-width: 800px;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  list-style: none;
  margin-bottom: 25px;
}

.sponser-item {
  margin: 10px;
}

.sponser-item img {
  width: 100%;
  max-width: 90px;
}

/* Modal Article */
.modal-article {
  display: none;
  background: rgba(39, 41, 48, 0.95);
  justify-content: center;
  align-items: center;
  height: 100%;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 200;
}

.modal-card {
  position: relative;
  display: flex;
  min-height: 50vh;
  min-width: 50vw;
  background: #fff;
  flex-direction: column;
  gap: 20px;
  border-radius: 20px;
  margin: 10px;
}

.cross-modal {
  top: 20px;
  right: 20px;
  padding: 5px;
  cursor: pointer;
  position: absolute;
  border-radius: 3px;
  background: #f00;
}

.cross-modal:hover {
  background: #ec5242;
}

.cross-modal:active {
  background: #f00;
  transform: translateY(-2px);
}

.modal-title {
  font-size: 2rem;
  font-weight: 900;
  margin-bottom: 20px;
  color: #ec5242;
  text-align: center;
  padding: 20px;
  border-bottom: 1px solid #d3d3d3;
}

.modal-details {
  background: #089b21;
  color: #fff;
  padding: 20px;
  border-radius: 10px;
  width: 80%;
  align-self: center;
  min-height: 100px;
  justify-self: center;
}

/* Footer */
.footer {
  background: #d6d6d6;
  color: #272a31;
  padding: 20px;
}

.footer-block {
  display: flex;
  max-width: 800px;
  justify-content: space-between;
  align-items: center;
  align-self: center;
  margin: 0 auto;
}

.footer-block .logo {
  margin-right: 10px;
  align-self: center;
  justify-self: center;
}

.footer-block h3 {
  font-size: 1rem;
}

@media screen and (min-width: 768px) {
  /* Header */
  .header {
    background: #fff;
    padding: 0;
  }

  .header-top {
    display: flex;
    background: #272a31;
    color: #fff;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
  }

  .top-header-group {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
  }

  .top-header-item {
    margin-right: 20px;
    padding: 5px;
  }

  .top-header-item-link {
    color: #fff;
    font-size: 14px;
    align-self: center;
  }

  .top-header-item-link:hover {
    color: #ec5242;
  }

  .top-social-icon {
    max-height: 16px;
  }

  .navbar {
    padding: 20px;
    justify-content: space-between;
  }

  .m-nav {
    display: none;
  }

  .d-nav {
    display: flex;
  }

  .menu-icon {
    display: none;
  }

  .nav-link {
    font-size: 1rem;
    margin: 0 10px;
    padding: 8px;
    color: #272a31;
    font-weight: normal;
  }

  /* Main container */
  .container {
    margin-top: 70px;
  }

  /* Hero Section */
  .hero {
    padding: 70px 50px;
  }

  .hero-title {
    font-size: 4rem;
    margin-bottom: 50px;
  }

  /* Program Section */
  .program-group {
    display: flex;
    flex-direction: row;
    gap: 3px;
    max-width: 800px;
    margin: 0 auto;
  }

  .program-item {
    flex-direction: column;
    margin: 0;
    margin: 0 3px;
  }

  .program-name {
    width: 100%;
  }

  .program-details {
    width: 100%;
    text-align: center;
  }

  /* Feature Tutors */
  #m-tutor-group {
    display: none;
  }

  #d-tutor-group {
    display: flex;
  }

  .tutor-group {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .tutor-list {
    width: 47%;
    margin: 25px 5px;
  }

  .see-more-tutors {
    display: none !important;
  }

  .btn-program {
    text-decoration: underline;
    color: #fff;
    background: initial;
    border: none;
    margin: 35px 0;
    padding: 10px 15px;
  }

  .btn-program:hover {
    background: initial;
    color: #ec5242;
  }

  .btn-program:active {
    background: initial;
    color: #fff;
  }

  /* sponser section */
  .sponser {
    padding: 30px;
  }

  .sponser-item-group {
    flex-wrap: nowrap;
  }

  .sponser-item {
    margin: 25px;
  }

  .sponser-item img {
    max-width: 150px;
  }

  /* Footer */
  .footer {
    padding: 30px;
  }
}

